spices/thread-pool/tests/compile-fail/wrong-item-type.tur
;; EXPECT: TUR-E0001  (Pool int rejects a cstr submit)
(defmodule cf-wrong-item-type
  (import thread-pool/pool :refer [Pool pool-new pool-submit pool-stop])
  (defn main [] : int
    (let [p (pool-new 2 (fn [x : int] : void nil))]
      (do (pool-submit p "not an int") (pool-stop p) 0))))
